Made arima residuals and corresponding experts

--- a/code/notebooks/functions.ipynb
+++ b/code/notebooks/functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "41ba5d90-6ecc-40b4-a67f-737ec7c1cebe",
    "metadata": {},
    "outputs": [],
@@ -145,6 +145,27 @@
     "        continue\n",
     "    plt.plot(grid, wh.func(grid), label=key)\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "21cef98b-7d2d-405e-a439-6b268c072c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1000000000.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.clip(-23424235525624, -1e9, 1e9)"
    ]
   },
   {
