--- a/code/notebooks/show.ipynb
+++ b/code/notebooks/show.ipynb
@@ -42,7 +42,7 @@
     "from synthesizer import Synthesizer\n",
     "from generator import Generator\n",
     "from algorithm import Algorithm\n",
-    "\n",
+    "from analysis import Analysis\n",
     "\n",
     "from hypers import weight_hypers\n",
     "from hypers import alpha_hypers"
@@ -65,10 +65,11 @@
     "a, b = -40, 40\n",
     "train_window = 10\n",
     "\n",
+    "np.random.seed(3)\n",
     "# Cоздание синтезатора, cпособного создавать workers_num наборов параметров, для каждого из которых генерировать временные ряды.\n",
     "# Сигнал - случайный вектор из нормального распределения. Отклик - скалярное произведение сигнала на вектор весов плюс нормальный шум из N(0,1)\n",
     "synt = Synthesizer(series_type, dim=10, low=-10, high=10, clip=(a, b),\n",
-    "                   noise_var=1, workers_num=3, random_seed=131)\n",
+    "                   noise_var=1, workers_num=5)\n",
     "\n",
     "# Создание генератора данных, склеивающего разнородные временные ряды в один \n",
     "# В данном случае источник рядов - наш синтезатор\n",
@@ -76,7 +77,7 @@
     "\n",
     "# Получение итогового временного ряда путем получения от синтезатора pieces_num временных рядов \n",
     "# произвольного размера из [lower_bound, upper_bound) и их последующей склейки\n",
-    "gen.generate(length=2000, from_start=from_start, lower_bound=100, upper_bound=400, alternating=True)"
+    "gen.generate(length=2000, from_start=from_start, lower_bound=50, upper_bound=300, alternating=True)"
    ]
   },
   {
@@ -102,15 +103,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "82c0cb6a-e45e-461e-a4fa-d1a9a2996c3c",
+   "id": "b7de1531-2ffa-4428-a688-d5de8b601b37",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████| 2703/2703 [01:30<00:00, 29.80it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████| 2703/2703 [01:30<00:00, 29.81it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 3072/3072 [01:33<00:00, 32.82it/s]\n"
      ]
     }
    ],
@@ -120,15 +120,101 @@
     "# algo1.run()\n",
     "# algo1.post_calculations(from_start=from_start)\n",
     "\n",
-    "# gen.launch()\n",
-    "# algo0 = Algorithm(\"default\", gen, train_window=train_window, a=a, b=b, share_type=\"start\")\n",
-    "# algo0.run()\n",
-    "# algo0.post_calculations(from_start=from_start)\n",
-    "\n",
     "gen.launch()\n",
-    "algo0_dec = Algorithm(\"default\", gen, train_window=train_window, a=a, b=b, share_type=\"decaying past\")\n",
+    "algo0 = Algorithm(\"default\", gen, train_window=train_window, a=a, b=b, mixing_type=\"start\")\n",
+    "algo0.run()\n",
+    "anl0 = Analysis(algo0)\n",
+    "anl0.post_calculations(from_start=from_start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0f68ad64-f483-4aec-8dd2-08d6db0f96b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 3072/3072 [02:05<00:00, 24.49it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gen.launch()\n",
+    "algo0_dec = Algorithm(\"default\", gen, train_window=train_window, a=a, b=b, mixing_type=\"decaying past\")\n",
     "algo0_dec.run()\n",
-    "algo0_dec.post_calculations(from_start=from_start)\n",
+    "anl0_dec = Analysis(algo0_dec)\n",
+    "anl0_dec.post_calculations(from_start=from_start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "88315a10-95d9-4b15-90a6-6c4a0dbf3a06",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'draw_several' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 8\u001b[0m\n\u001b[1;32m      4\u001b[0m labels \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMaster default + start\u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[1;32m      5\u001b[0m          \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMaster default + decaying past\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m      6\u001b[0m colors \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;01mNone\u001b[39;00m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[0;32m----> 8\u001b[0m \u001b[43mdraw_several\u001b[49m(from_start\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, anls\u001b[38;5;241m=\u001b[39manls, labels\u001b[38;5;241m=\u001b[39mlabels, colors\u001b[38;5;241m=\u001b[39mcolors, title\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, fig_size\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m15\u001b[39m, \u001b[38;5;241m5\u001b[39m), loc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mupper left\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'draw_several' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# from analysis import draw_several\n",
+    "\n",
+    "anls = [anl0, anl0_dec]\n",
+    "labels = [\"Master default + start\", \n",
+    "         \"Master default + decaying past\"]\n",
+    "colors = [None] * 2\n",
+    "\n",
+    "draw_several(from_start=False, anls=anls, labels=labels, colors=colors, title=None, fig_size=(15, 5), loc='upper left')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "019b1a07-212e-4e5b-aae9-a9292ec60454",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ebb4af7-f0b3-4213-8878-7a97ae4344ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anl0_dec.draw_all(from_start=True, show=[\"master\", \"ideal\"], show_experts=[], show_axes=[\"regret\"], height_ratios=[1], \n",
+    "                  suptitle=f\"Cumulative losses plot\", fig_size=(12, 8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29bda600-67b0-4eaf-9677-d364263bf8a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anl0.regret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39e3bbdb-902d-4080-9a38-deaccf03ff3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "# gen.launch()\n",
     "# algo0_uni = Algorithm(\"default\", gen, train_window=train_window, a=a, b=b, share_type=\"uniform past\")\n",
@@ -142,10 +228,10 @@
     "# algo1.run()\n",
     "# algo1.post_calculations(from_start=from_start)\n",
     "\n",
-    "gen.launch()\n",
-    "algo1_dec = Algorithm(\"default\", gen, train_window=train_window, a=a, b=b, weights_func=wh.func, weight_const=wh.const, share_type=\"decaying past\")\n",
-    "algo1_dec.run()\n",
-    "algo1_dec.post_calculations(from_start=from_start)\n",
+    "# gen.launch()\n",
+    "# algo1_dec = Algorithm(\"default\", gen, train_window=train_window, a=a, b=b, weights_func=wh.func, weight_const=wh.const, share_type=\"decaying past\")\n",
+    "# algo1_dec.run()\n",
+    "# algo1_dec.post_calculations(from_start=from_start)\n",
     "\n",
     "# gen.launch()\n",
     "# algo1_uni = Algorithm(\"default\", gen, train_window=train_window, a=a, b=b, weights_func=wh.func, weight_const=wh.const, share_type=\"uniform past\")\n",
@@ -157,28 +243,35 @@
     "# ah = alpha_hypers[]\n",
     "# algo2 = Algorithm(\"default\", gen, train_window=train_window, a=a, b=b, weights_func=wh.func, weight_const=wh.const)\n",
     "# algo2.run()\n",
-    "# algo2.post_calculations(from_start=from_start)\n",
-    "\n"
+    "# algo2.post_calculations(from_start=from_start)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "a2f83761-4285-45d7-acce-a57ae397f68b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen.total_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c805729-89c5-4561-85c2-7ef630f8c0ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_all(algo0_dec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a1f320dd-0f90-4278-bc8a-854d2a225e21",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'algo0' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43malgo0\u001b[49m\u001b[38;5;241m.\u001b[39mregret)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(algo0_uni\u001b[38;5;241m.\u001b[39mregret)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(algo0_dec\u001b[38;5;241m.\u001b[39mregret)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'algo0' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(algo0.regret)\n",
     "print(algo0_uni.regret)\n",
@@ -289,197 +382,6 @@
    "source": [
     "plt.plot(algo0.weights_all.T[430])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fdd84ced-3afe-49b7-9e22-c46c6f1705ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# draw_weights(algo1, \"Динамика весов экспертов c ARIMA\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c3d0a80-aa0b-4c0a-925c-011d60bbb6f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(algo0.weights[:20])\n",
-    "plt.plot(algo1.weights[:20])\n",
-    "plt.xticks(np.arange(20))\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff641d72-c389-4f30-9406-6f7d3edeaaeb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# draw_more(algo0, show=[\"master\"], show_experts=[], show_axes=[\"regret\"], height_ratios=[1], \n",
-    "#                   suptitle=f\"Cumulative losses plot\", fig_size=(12, 8), ylims=(9.05e6,9.2e6))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6bbfbe0-cd96-4b8b-87bf-90bb76126865",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59da857a-ca4b-40cb-b562-d9d93dbcc381",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "algos = [algo0_uni, algo0_dec, algo1, algo1_uni, algo1_dec]\n",
-    "other = [algo.master_losses_all for algo in algos]\n",
-    "labels = [\"Master default + uniform past\", \n",
-    "         \"Master default + decaying past\",\n",
-    "        \"Master simple_101 + start\",\n",
-    "          \"Master simple_101 + uniform past\",\n",
-    "          \"Master simple_101 + decaying past\"]\n",
-    "colors = [None] * 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e583ab18-30d2-456e-b9c9-af002ff36280",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "draw_more(algo0, show=[\"master\"], show_experts=[], show_axes=[\"regret\"], height_ratios=[1], \n",
-    "                  suptitle=f\"Cumulative losses plot\", fig_size=(12, 8), \\\n",
-    "                  other=other, labels=labels, colors=colors)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9938be9-ae57-4898-a530-967039515c5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def draw_more(logs, show=None, show_experts=None,\n",
-    "             show_axes=None, height_ratios=None, suptitle=None, fig_size=(15, 10), ylims=None, other=None, labels=None, colors=None, loc='upper left'):\n",
-    "\n",
-    "    if show is None:\n",
-    "        show = [\"master\"]\n",
-    "    if show_experts is None:\n",
-    "        show_experts = []\n",
-    "    if show_axes is None:\n",
-    "        show_axes = [\"regret\"]\n",
-    "    if height_ratios is None:\n",
-    "        height_ratios = [1 for _ in show_axes]\n",
-    "    if suptitle is None:\n",
-    "        suptitle = \"Algorithm\"\n",
-    "    assert len(show_axes) == len(height_ratios), \"Wrong sizes\"\n",
-    "    if other is None:\n",
-    "        other = []\n",
-    "        labels = []\n",
-    "        colors=[]\n",
-    "    \n",
-    "\n",
-    "    text_idx = 0\n",
-    "\n",
-    "    fig, axes = plt.subplots(len(show_axes), 1, figsize=fig_size, sharex=True, height_ratios=height_ratios)\n",
-    "    ax = [axes] if len(show_axes) == 1 else axes\n",
-    "    grid = np.arange(logs.total_time - logs.shift)\n",
-    "\n",
-    "    try:\n",
-    "        idx = show_axes.index(\"loss\")\n",
-    "        text_idx = idx\n",
-    "\n",
-    "        if \"ideal\" in show:\n",
-    "            ax[idx].plot(grid, logs.ideal_losses[logs.shift:], label=\"Ideal expert losses\",\n",
-    "                         color='green')\n",
-    "        if \"zero\" in show:\n",
-    "            ax[idx].plot(grid, logs.zero_losses[logs.shift:],\n",
-    "                         label=\"Zero expert losses\",\n",
-    "                         color='yellow')\n",
-    "        for expert_num in show_experts:\n",
-    "            ax[idx].plot(grid, logs.experts_losses_all.T[expert_num][logs.shift:],\n",
-    "                         label=f\"Expert {expert_num} losses\")\n",
-    "        if \"master\" in show:\n",
-    "            ax[idx].plot(grid, logs.master_losses_all[logs.shift:], label=\"Master losses\",\n",
-    "                         color='red')\n",
-    "\n",
-    "        ax[idx].set_ylabel(\"Loss\")\n",
-    "        ax[idx].legend()\n",
-    "\n",
-    "    except ValueError:\n",
-    "        pass\n",
-    "\n",
-    "    try:\n",
-    "        idx = show_axes.index(\"regret\")\n",
-    "        if ylims is not None:\n",
-    "            ax[idx].set_ylim(ylims)\n",
-    "\n",
-    "        if \"ideal\" in show:\n",
-    "            ax[idx].plot(grid, logs.ideal_losses[logs.shift:].cumsum(),\n",
-    "                         label=\"Ideal expert cumulative losses\", color='green')\n",
-    "        if \"zero\" in show:\n",
-    "            ax[idx].plot(grid, logs.zero_losses[logs.shift:].cumsum(),\n",
-    "                         label=\"Zero expert cumulative losses\", color='yellow')\n",
-    "\n",
-    "        for expert_num in show_experts:\n",
-    "            ax[idx].plot(grid, logs.experts_losses_all.T[expert_num][logs.shift:].cumsum(),\n",
-    "                         label=f\"Expert {expert_num} cumulative losses\")\n",
-    "\n",
-    "        if \"master\" in show:\n",
-    "            ax[idx].plot(grid, logs.master_losses_all[logs.shift:].cumsum(),\n",
-    "                         label=\"Default master cumulative losses\", color='red')\n",
-    "\n",
-    "        if \"theoretical\" in show:\n",
-    "            ax[idx].plot(grid, logs.theoretical_upper[logs.shift:],\n",
-    "                         label=\"Theoretical upper bound\", color='black')\n",
-    "        for another, label, color in zip(other, labels, colors):\n",
-    "            ax[idx].plot(grid, another[logs.shift:].cumsum(),\n",
-    "                             label=label, color=color)\n",
-    "        \n",
-    "\n",
-    "        ax[idx].set_xlabel(\"Time\")\n",
-    "        ax[idx].set_ylabel(\"Cumulative loss\")\n",
-    "        \n",
-    "        ax[idx].legend(loc=loc)\n",
-    "        \n",
-    "\n",
-    "    except ValueError:\n",
-    "        pass\n",
-    "\n",
-    "    bottom, top = ax[text_idx].get_ybound()\n",
-    "    left, right = ax[text_idx].get_xbound()\n",
-    "    for gen_idx, gen_stamp in zip(np.r_[logs.indexes, -1], logs.stamps):\n",
-    "        if gen_stamp < logs.shift:\n",
-    "            continue\n",
-    "        for i in range(len(show_axes)):\n",
-    "            ax[i].axvline(gen_stamp - logs.shift, color='orange', linestyle=':')\n",
-    "        if gen_idx != -1:\n",
-    "            ax[text_idx].text(x=gen_stamp - logs.shift + 0.005 * (right - left), y=top - 0.12 * (top - bottom),\n",
-    "                              s=f\"gen {gen_idx}\", color='orange', rotation=15)\n",
-    "\n",
-    "    fig.suptitle(suptitle, fontsize=15)\n",
-    "    # plt.savefig('../results/impovement.png')\n",
-    "    plt.savefig('../results/improvement3.eps', format='eps')\n",
-    "    plt.show()\n",
-    "   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e3dfe1b-23e9-4f1e-b10c-d22ff7fd1222",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
